Fix moved files error

--- a/dades.ipynb
+++ b/dades.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "id": "2d0fed17-34e4-47c5-8430-f6e728c89eac",
    "metadata": {},
    "outputs": [],
@@ -14,26 +14,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "79d27d64-1642-4b10-b40d-a10c42ac0244",
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "462539df-0321-4092-9067-d9d0dbbebaad",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "file = nc.Dataset(\"CALIOPE/daily_mean/pm10/pm10_2023100500.nc\")"
+    "file = nc.Dataset(\"dades/CALIOPE/daily_mean/pm10/pm10_2023100500.nc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "ea9a1198-1911-40a3-92c4-aa6a0224b600",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x797a8adc0d10>"
+       "<matplotlib.collections.QuadMesh at 0x797a89c63dd0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
