--- a/dades.ipynb
+++ b/dades.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d0fed17-34e4-47c5-8430-f6e728c89eac",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "462539df-0321-4092-9067-d9d0dbbebaad",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,13 @@
     "file = nc.Dataset(\"dades/DADES_CALIOPE_buenos/NO2/sconcno2_2023010100.nc\")\n",
     "#sf = shp.Reader(\"dades/LimitsAdministratius/Catalunya/divisions-administratives-v2r1-catalunya-5000-20240705\")\n",
     "div_gdf = gpd.read_file(\"dades/LimitsAdministratius/Catalunya/divisions-administratives-v2r1-catalunya-5000-20240705.shp\")\n",
-    "lu = rio.open(\"dades/LandUse/MUCSC_2022_10_m_v_3.tif\")"
+    "lu = rio.open(\"dades/LandUse/MUCSC_2022_10_m_v_3.tif\")\n",
+    "traffic_bcn = gpd.read_file(\"dades/OpenTransportMap/Barcelona/roadlinks_ES511.shp\") #Trafficvol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6d1bf7bf-129f-413b-9114-fe5ec5472345",
    "metadata": {},
    "outputs": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7959dbed-5d9a-4e94-bae2-11ed7b48f4cb",
    "metadata": {},
    "outputs": [
@@ -108,6 +109,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "33365cb1-6ae6-4121-b96d-267d7062ddb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_662966/1727336124.py:19: UserWarning: Geometry is in a geographic CRS. Results from 'distance' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  elem = gdf['geometry'].distance(point)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.float64(60.394527054835095)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joan/code/bitsxm/venv/lib/python3.12/site-packages/shapely/measurement.py:72: RuntimeWarning: invalid value encountered in distance\n",
+      "  return lib.distance(a, b, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_AMS_sconcno2 = pd.read_csv('dades/AMS_Observacions/XVPCA_info_sconcno2_2023.csv') #lat lon of stations. Also if they are suburban/rural/urban-center\n",
+    "gdf = gpd.GeoDataFrame(traffic_bcn)\n",
+    "\n",
+    "def get_min_dist(df, gdf): # -> Input> Dataframe with .csv with station location, gdf with lines which are the start / end of the road in lat,lon. Output is an array of the closest distance between a station and the road\n",
+    "    \n",
+    "    AMS_np = df\n",
+    "    AMS_np_lat = AMS_np[:,0]\n",
+    "    AMS_np_lon = AMS_np[:,1]\n",
+    "    lis = []\n",
+    "    lis_points = []\n",
+    "\n",
+    "    AMS_fused = np.vstack((AMS_np_lon, AMS_np_lat)).T\n",
+    "\n",
+    "    for element in AMS_fused:\n",
+    "        p = Point(element[0], element[1])\n",
+    "        lis_points.append([p])\n",
+    "    for point_coords in lis_points:\n",
+    "        point = Point(point_coords[0])\n",
+    "        elem = gdf['geometry'].distance(point)\n",
+    "        lis.append(elem.min())\n",
+    "    return(lis)\n",
+    "\n",
+    "print (get_min_dist(np.array(np.vstack(([4],[50])).T), gdf))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "8b543e06-362f-44cd-8256-6317bafbcd86",
    "metadata": {},
@@ -151,9 +209,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_662966/1727336124.py:19: UserWarning: Geometry is in a geographic CRS. Results from 'distance' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  elem = gdf['geometry'].distance(point)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([3.7246192], dtype=float32)"
+       "array([174.05402924])"
       ]
      },
      "execution_count": 8,
@@ -182,7 +249,7 @@
     "    lu_lon_iv = find_nearestv(lu_lon, lonv)\n",
     "    lu_lat_iv = find_nearestv(lu_lat, latv)\n",
     "    ca_indexs = ca_tree.query(np.vstack((np.ravel(lonv), np.ravel(latv))).T)[1]\n",
-    "    return 1912.5 * ca_dat[time][ca_indexs] #* lu_ponderacions[lu_dat[lu_lat_iv, lu_lon_iv]]\n",
+    "    return 1912.5 * (ca_dat[time][ca_indexs]+ 1 / np.array(get_min_dist(np.vstack((latv,lonv)).T,gdf)))#* lu_ponderacions[lu_dat[lu_lat_iv, lu_lon_iv]]\n",
     "    \n",
     "predictv([2.5],[30],0)-ca_dat[0][0]"
    ]
@@ -211,10 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f40d6b99-25e1-4da9-9980-a194377327f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_662966/1727336124.py:19: UserWarning: Geometry is in a geographic CRS. Results from 'distance' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "\n",
+      "  elem = gdf['geometry'].distance(point)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-01\n",
+      "2023-01-02\n",
+      "2023-01-03\n",
+      "2023-01-04\n"
+     ]
+    }
+   ],
    "source": [
     "def read_data(t):\n",
     "    try:\n",
@@ -242,6 +329,7 @@
     "        for j, (lon, lat) in enumerate(zip(lons, lats)):\n",
     "            result.append((i, str, lat, lon, pred[j]))\n",
     "            i += 1\n",
+    "    print(start.strftime(\"%Y-%m-%d\"))\n",
     "    start += delta\n",
     "        \n",
     "columns = ['id', 'date', 'lat', 'lon', 'concentration']\n",
@@ -252,12 +340,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aabba11-5c2f-444c-b14c-30566bca6d16",
+   "id": "8ec16b0d-9922-4c45-8af1-4514c5614e97",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "0.31122"
-   ]
+   "source": []
   }
  ],
  "metadata": {
